# Retail-Store-monitoring-system

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  RTSP.md
scripts/: legacy_entry.py  smoke_rtsp.py
src/retail_monitor/: __init__.py  api.py  cli.py  config.py  factory.py  logging_setup.py  pipeline.py
src/retail_monitor/analyzers/: __init__.py  base.py  gemini_analyzer.py  json_utils.py  prompts.py  qwen_analyzer.py  stub_analyzer.py
src/retail_monitor/detectors/: __init__.py  base.py  yolo_world.py
src/retail_monitor/io/: __init__.py  rtsp.py  video.py
src/retail_monitor/models/: __init__.py  schemas.py
src/retail_monitor/services/: __init__.py  alerts.py  storage.py
tests/: conftest.py  test_alerts.py  test_config.py  test_factory_providers.py  test_json_utils.py  test_pipeline.py  test_storage.py
